--- a/Try version2/style.css
+++ b/Try version2/style.css
@@ -28,7 +28,7 @@ body {
     width: 72%;
     padding: 10px;
     outline: none;
-    border-radius: 12px;
+    border-radius: 10px;
     padding: 12px;
     border: none;
     font-size: 17px;
@@ -41,7 +41,7 @@ body {
     background-color: #0e9facc1;
     color: #fff;
     border: none;
-    border-radius: 12px;
+    border-radius: 10px;
     padding: 12px;
     min-width: 20%;
     font-size: 17px;
@@ -88,7 +88,7 @@ body {
   #recipe-list li {
     margin-bottom: 10px;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0px 0px 20px #ccc;
   }
   
@@ -106,7 +106,7 @@ body {
     padding: 20px;
     margin-right: 30px;
     background-color: #f8f8f8;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0px 0px 20px #ccc;
   }
 
@@ -129,10 +129,10 @@ body {
  .most_popular{
     
     font-size: 24px;
-    border-radius: 40px;
+    border-radius: 10px;
     background-color: #68e7f345;
     color: white;
-    box-shadow: 10px 0px 20px #ccc;
+    border: 1px solid #05393f45;
     padding: 10px;
     padding-left: 40px;
     padding-right: 40px;
